--- a/dropbox/dropbox.css
+++ b/dropbox/dropbox.css
@@ -1,3 +1,54 @@
+#menu {
+	font-size: 13px;
+	line-height: 20px;
+	font-weight: 400;
+	padding-top: 35px;
+}
+
+#menu ul {
+	list-style-type: none;
+}
+
+#menu a {
+	text-decoration: none;
+	color: white;
+}
+
+#header {
+	background-color: #007EE5;
+	color: white;
+	height: 500px;
+	background-image: url("assets/dropbox-for-business-files.png");
+	background-position: 50% 50%;
+}
+
+/*#bg {
+    background-image: url("assets/dropbox-for-business-files.png");
+    content : "";
+    display: block;
+		position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 500px;
+    opacity : 1;
+    z-index: -1;
+		background-position: 50% 50%;
+}*/
+
+#teamsync {
+	padding-top: 70px;
+	text-align: center;
+	z-index: 1;
+}
+
+#teamsync a {
+	text-decoration: none;
+	color: white;
+	border-bottom: 1px solid white;
+	padding-bottom: 5px;
+}
+
 #whatcan {
 	text-align: center;
 	color: #8899A7;
@@ -23,11 +74,13 @@ h1 {
 h2 {
 	font-size: 22px;
 	font-weight: 400;
+	color: #8899A7;
 }
 
 h3 {
 	font-size: 15px;
 	font-weight: 400;
+	line-height: 25px;
 }
 
 p {
@@ -41,57 +94,20 @@ p {
 	background-color: gray;
 }
 
-#menu {
-	font-size: 13px;
-	line-height: 26px;
-	font-weight: 400;
-	padding-top: 45px;
-}
 
-#menu ul {
-	list-style-type: none;
-}
-
-#menu a {
-	text-decoration: none;
-	color: white;
-}
-
-#header {
-	width: 100%;
-}
-
-#bizsection {
-	background-image: url("assets/dropbox-for-business-files.png");
-	background-color: #007EE5;
-	background-position: 50% 50%;
-	color: white;
-	height: 430px;
-
-}
-
-#teamsync {
-	padding-top: 70px;
-	text-align: center;	
-}
-
-#teamsync a {
-	text-decoration: none;
-	color: white;
-	border-bottom: 1px solid white;
-	padding-bottom: 5px;
-}
 
 .round {
   -webkit-border-radius: 5px; 
   -moz-border-radius: 5px; 
-  border-radius: 5px; 
+  border-radius: 3px; 
 }
 
 .trybutton {
+	z-index: 1;
 	height: 50px;
 	width: 280px;
 	margin: 0 auto;
+	box-shadow: 1px 1px 1px 1px #888888;
 }
 
 .trybutton p {
@@ -123,8 +139,18 @@ p {
 	border-color: #007EE5;
 }
 
+.bluebutton {
+	background-color: #007EE5;
+	color: white;
+}
+
 .learnbutton h3 {
 	margin: 5px;
+}
+
+#video {
+	padding-left: 0;
+	padding-right: 0;
 }
 
 #video-still {
@@ -151,3 +177,17 @@ p {
 /*	display: none;*/
 }
 
+#in-sync {
+	text-align: center;
+	color: #8899A7;
+}
+
+body {
+	background-color: gray;
+}
+
+#wrapper {
+	background-color: white;
+	margin-left: auto;
+	margin-right:auto;
+}
