--- a/dropbox/animations.css
+++ b/dropbox/animations.css
@@ -1,6 +1,6 @@
 /*Animation for background in header*/
 @keyframes backgroundSlide {
-	0% {;
+	0% {
 		background-image: none;
 		background-position: 50% 0;
 	}
@@ -28,7 +28,6 @@
 		background-image: url("assets/dropbox-for-business-files.png");
 	}
 }
-
 
 @keyframes imageSlideNoDelay {
 	0% {
@@ -59,7 +58,6 @@
 		transform: translate(0,0);
 	}
 }
-
 
 keyframes imageSlideDelayOne {
 	0% {
@@ -131,4 +129,16 @@ keyframes imageSlideDelayTwo {
 	100% {
 		transform: translate(0,0);
 	}
+}
+
+@-webkit-keyframes carouselSlideLeft {
+	0% {
+		transform: translate(100%, 0);
+	}
+	100% {
+		transform: translate(0,0);
+	}
+}
+
+@-webkit-keyframs carouselSlideRight {
 }
