--- a/dropbox/dropbox.css
+++ b/dropbox/dropbox.css
@@ -29,45 +29,23 @@
 .why-image {
 	width: 100%;
 	max-width: 200px;
+
+}
+
+.why-div {
+	width: 100%;
+	max-width: 200px;
+	height: 100%;
+	max-height: 182px;
 }
 
 .hidden {
-	display: none;
+	visibility: hidden;
 }
 
-.image-slide {
-	-webkit-animation-duration: .85s;
-	animation-duration: .85s;
+.footer a {
+	text-decoration: none;
 }
-
-.no-delay {
-	-webkit-animation-name: imageSlideNoDelay;
-	animation-name: imageSlideNoDelay;
-}
-
-.delay-1 {
-	-webkit-animation-name: imageSlideDelayOne;
-	animation-name: imageSlideDelayOne;
-}
-
-.delay-2 {
-	-webkit-animation-name: imageSlideDelayTwo;
-	animation-name: imageSlideDelayTwo;
-}
-
-/*#bg {
-    background-image: url("assets/dropbox-for-business-files.png");
-    content : "";
-    display: block;
-		position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 500px;
-    opacity : 1;
-    z-index: -1;
-		background-position: 50% 50%;
-}*/
 
 #teamsync {
 	padding-top: 70px;
@@ -170,11 +148,13 @@ p {
 	height: 35px;
 	border-width: 1px;
 	border-color: #007EE5;
+	cursor: pointer;
 }
 
 .bluebutton {
 	background-color: #007EE5;
 	color: white;
+	cursor: pointer;
 }
 
 .learnbutton h3 {
