--- a/dropbox/dropbox.css
+++ b/dropbox/dropbox.css
@@ -1,76 +1,3 @@
-#menu {
-	font-size: 13px;
-	line-height: 20px;
-	font-weight: 400;
-	padding-top: 35px;
-}
-
-#menu ul {
-	list-style-type: none;
-}
-
-#menu a {
-	text-decoration: none;
-	color: white;
-}
-
-#header {
-	background-color: #007EE5;
-	color: white;
-	height: 500px;
-	background-image: url("assets/dropbox-for-business-files.png");
-	background-position: 50% 50%;
-	-webkit-animation-name: backgroundSlide;
-	-webkit-animation-duration: 1s;
-	animation-name: backgroundSlide;
-	animation-duration: 1s;
-}
-
-.why-image {
-	width: 100%;
-	max-width: 200px;
-
-}
-
-.why-div {
-	width: 100%;
-	max-width: 200px;
-	height: 100%;
-	max-height: 182px;
-}
-
-.hidden {
-	visibility: hidden;
-}
-
-.footer a {
-	text-decoration: none;
-}
-
-#teamsync {
-	padding-top: 70px;
-	text-align: center;
-	z-index: 1;
-}
-
-#teamsync a {
-	text-decoration: none;
-	color: white;
-	border-bottom: 1px solid white;
-	padding-bottom: 5px;
-}
-
-#whatcan {
-	text-align: center;
-	color: #8899A7;
-}
-
-#whydropbox {
-	text-align: center;
-	color: #8899A7;
-	font-weight: 400;
-}
-
 body {
 	font-family: "Open Sans", sans-serif;
 	font-weight: 300;
@@ -99,13 +26,85 @@ p {
 	font-weight: 300;
 }
 
-.test {
-	width: 100px;
-	height: 80px;
-	background-color: gray;
+#menu {
+	font-size: 13px;
+	font-weight: 400;
 }
 
+#menu h3 {
+	line-height: 1em;
+}
 
+#db-logo {
+	padding-top: 35px;
+	padding-bottom: 20px;
+}
+
+#menu ul {
+	list-style-type: none;
+}
+
+#menu a {
+	text-decoration: none;
+	color: white;
+}
+
+#header {
+	background-color: #007EE5;
+	color: white;
+	height: 500px;
+	background-image: url("assets/dropbox-for-business-files.png");
+	background-position: 50% 50%;
+	-webkit-animation-name: backgroundSlide;
+	-webkit-animation-duration: 1s;
+	animation-name: backgroundSlide;
+	animation-duration: 1s;
+}
+
+.why-image {
+	width: 100%;
+	max-width: 200px;
+}
+
+.why-div {
+	width: 100%;
+	max-width: 200px;
+	height: 100%;
+	max-height: 182px;
+}
+
+.hidden {
+	visibility: hidden;
+}
+
+.footer a {
+	text-decoration: none;
+}
+
+#teamsync {
+	padding-top: 100px;
+	text-align: center;
+	z-index: 1;
+	line-height: 1em;
+}
+
+#teamsync a {
+	text-decoration: none;
+	color: white;
+	border-bottom: 1px solid white;
+	padding-bottom: 5px;
+}
+
+#whatcan {
+	text-align: center;
+	color: #8899A7;
+}
+
+#whydropbox {
+	text-align: center;
+	color: #8899A7;
+	font-weight: 400;
+}
 
 .round {
   -webkit-border-radius: 5px; 
@@ -117,7 +116,10 @@ p {
 	z-index: 1;
 	height: 50px;
 	width: 280px;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 24px;
+	margin-bottom: 24px;
 	box-shadow: 1px 1px 1px 1px #888888;
 }
 
