--- a/dropbox/dropbox.css
+++ b/dropbox/dropbox.css
@@ -106,6 +106,20 @@ p {
 	font-weight: 400;
 }
 
+#whydropbox h2 {
+	margin-top: 7px;
+	margin-bottom: 0;
+}
+
+#whydb-points h3 {
+	font-weight: 300;
+}
+
+#whydb-header h2 {
+	margin-top: 2.5em;
+	margin-bottom: 0;
+}
+
 .round {
   -webkit-border-radius: 5px; 
   -moz-border-radius: 5px; 
@@ -147,10 +161,15 @@ p {
 	color: #007EE5;
 	border-style: solid;
 	width: 110px;
-	height: 35px;
+	height: 34px;
 	border-width: 1px;
 	border-color: #007EE5;
 	cursor: pointer;
+}
+
+.learnbutton h3 {
+	margin-top: 3px;
+	font-weight: 400;
 }
 
 .bluebutton {
@@ -159,8 +178,9 @@ p {
 	cursor: pointer;
 }
 
-.learnbutton h3 {
-	margin: 5px;
+#whydb-learnbutton {
+	padding-top: 8px;
+	padding-bottom: 50px;
 }
 
 #video {
