--- a/dropbox/dropbox.css
+++ b/dropbox/dropbox.css
@@ -29,6 +29,7 @@ p {
 #menu {
 	font-size: 13px;
 	font-weight: 400;
+	z-index: 2;
 }
 
 #menu h3 {
@@ -59,6 +60,11 @@ p {
 	-webkit-animation-duration: 1s;
 	animation-name: backgroundSlide;
 	animation-duration: 1s;
+/*	overflow: hidden;*/
+}
+
+#header-cover {
+	
 }
 
 .why-image {
@@ -84,7 +90,7 @@ p {
 #teamsync {
 	padding-top: 100px;
 	text-align: center;
-	z-index: 1;
+	z-index: 2;
 	line-height: 1em;
 }
 
