--- a/dropbox/dropbox.css
+++ b/dropbox/dropbox.css
@@ -88,10 +88,18 @@ p {
 }
 
 #teamsync {
-	padding-top: 100px;
+	position: relative;
+	top: 13.5%;
 	text-align: center;
 	z-index: 2;
-	line-height: 1em;
+}
+
+#teamsync h1 {
+	margin-bottom: 0;
+}
+
+#tstext {
+	margin-top: 1.5%;
 }
 
 #teamsync a {
@@ -102,6 +110,8 @@ p {
 }
 
 #whatcan {
+	padding-top: 35px;
+	padding-bottom: 30px;
 	text-align: center;
 	color: #8899A7;
 }
@@ -135,7 +145,8 @@ p {
 .trybutton {
 	z-index: 1;
 	height: 50px;
-	width: 280px;
+	width: 80%;
+	max-width: 280px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 24px;
@@ -221,6 +232,7 @@ p {
 #in-sync {
 	text-align: center;
 	color: #8899A7;
+	padding: 40px;
 }
 
 body {
