--- a/dropbox/grid.css
+++ b/dropbox/grid.css
@@ -1,6 +1,11 @@
 div {
 	box-sizing: border-box;
 }
+
+.row {
+	position: relative;
+}
+
 .grid-container{
     width: 100%; 
     max-width: 1050px;
