--- a/flappybird/flappy.css
+++ b/flappybird/flappy.css
@@ -1,15 +1,28 @@
-#restart-button{
-  width:200px;
-  height:40px;
-  background-color:red;
-  color: white;
-  text-align: center;
-  }
+.wrapper {
+	position: relative;
+}
 
-  #restart-button:hover {
-    cursor: pointer;
-  }
+#restart-button {
+	margin: 0 auto;
+	width:200px;
+	background-color:red;
+	color: white;
+	text-align: center;
+}
+	
+#restart-button:hover {
+	cursor: pointer;
+}
 
 #restart-button h2 {
-  margin: auto;
+	margin: 0 auto;
+}
+
+body {
+	background-color: gray;
+	max-width: 660px;
+}
+
+#bird-game {
+	margin: 5px;
 }
