--- a/flappybird/flappy.css
+++ b/flappybird/flappy.css
@@ -4,10 +4,13 @@
 
 #restart-button {
 	margin: 0 auto;
-	width:200px;
+	margin-bottom: 5px;
+	width: 150px;
 	background-color:red;
 	color: white;
 	text-align: center;
+	border-radius: 3px;
+	border: 1px solid black;
 }
 	
 #restart-button:hover {
@@ -19,10 +22,24 @@
 }
 
 body {
-	background-color: gray;
+	background-color: #d9e0e2;
 	max-width: 660px;
 }
 
 #bird-game {
 	margin: 5px;
+}
+
+#gameinfo {
+	background-color: yellow;
+	width: 60%;
+	margin: 0 auto;
+	text-align: center;
+	border-radius: 5px;
+	border: 1px solid black;
+	padding: 0;
+}
+
+body {
+	box-sizing: border-box;
 }
