--- a/dropbox/animations.css
+++ b/dropbox/animations.css
@@ -1,32 +1,51 @@
-/*Animation for background in header*/
+/***********************
+	Background in header
+***********************/
+
 @keyframes backgroundSlide {
 	0% {
-		background-image: none;
-		background-position: 50% 0;
-	}
-	50% {
-		background-image: url("assets/dropbox-for-business-files.png");
 		background-position: 50% 0;
 	}
 	100% {
 		background-position: 50% 50%;
-		background-image: url("assets/dropbox-for-business-files.png");
 	}
 }
 
 @-webkit-keyframes backgroundSlide {
-	0% {;
-		background-image: none;
+	0% {
 		background-position: 50% 0;
-	}
-	50% {
-		background-image: url("assets/dropbox-for-business-files.png");
-
 	}
 	100% {
 		background-position: 50% 50%;
-		background-image: url("assets/dropbox-for-business-files.png");
 	}
+}
+
+
+/************************************************
+	Images in "Why Dropbox for Business?" section
+************************************************/
+
+.image-slide {
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
+}
+
+.no-delay {
+	-webkit-animation-name: imageSlideNoDelay;
+	animation-name: imageSlideNoDelay;
+		animation-duration: 1s;
+}
+
+.delay-1 {
+	-webkit-animation-name: imageSlideDelayOne;
+	animation-name: imageSlideDelayOne;
+	animation-duration: 1s;
+}
+
+.delay-2 {
+	-webkit-animation-name: imageSlideDelayTwo;
+	animation-name: imageSlideDelayTwo;
+	animation-duration: 1s;
 }
 
 @keyframes imageSlideNoDelay {
@@ -131,61 +150,4 @@
 	}
 }
 
-@keyframes carouselSlideLeft {
-	0% {
-		transform: translate(80%, 0);
-	}
-	100% {
-		transform: translate(0,0);
-	}
-}
 
-@-webkit-keyframes carouselSlideLeft {
-	0% {
-		transform: translate(80%, 0);
-	}
-	100% {
-		transform: translate(0,0);
-	}
-}
-
-@keyframes carouselSlideRight {
-	0% {
-		transform: translate(-80%, 0);
-	}
-	100% {
-		transform: translate(0,0);
-	}	
-}
-
-@-webkit-keyframes carouselSlideRight {
-	0% {
-		transform: translate(-80%, 0);
-	}
-	100% {
-		transform: translate(0,0);
-	}
-}
-
-.image-slide {
-	-webkit-animation-duration: 1s;
-	animation-duration: 1s;
-}
-
-.no-delay {
-	-webkit-animation-name: imageSlideNoDelay;
-	animation-name: imageSlideNoDelay;
-		animation-duration: 1s;
-}
-
-.delay-1 {
-	-webkit-animation-name: imageSlideDelayOne;
-	animation-name: imageSlideDelayOne;
-	animation-duration: 1s;
-}
-
-.delay-2 {
-	-webkit-animation-name: imageSlideDelayTwo;
-	animation-name: imageSlideDelayTwo;
-	animation-duration: 1s;
-}
