--- a/dropbox/grid.css
+++ b/dropbox/grid.css
@@ -4,6 +4,8 @@ div {
 
 .row {
 	position: relative;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 .grid-container{
@@ -11,15 +13,10 @@ div {
     max-width: 1050px;
 }
 
-.row {
-	padding-left: 15px;
-	padding-right: 15px;
-}
-
 .row:before, 
 .row:after {
     content:"";
-      display: table;
+    display: table;
 }
 
 .row:after {
@@ -31,7 +28,7 @@ div {
     min-height: 1px; 
     width: 8.33%; 
     padding: 15px; 
-}
+	}
 
 .col-1{ width: 8.33%; }
 .col-2{ width: 16.66%; }
@@ -46,21 +43,24 @@ div {
 .col-11{ width: 91.66%; }
 .col-12{ width: 100%;   }
 
-/*  GO FULL WIDTH BELOW 480 PIXELS */
+/******************************************
+	Behavior for screen width of 480px or less
+******************************************/
+
 @media only screen and (max-width: 480px) {
-	[class*='col-'] {  margin: 1% 0 1% 0%; }
-  .col-1, 
-	.col-2, 
-	.col-3, 
-	.col-4, 
-	.col-5, 
-	.col-6, 
-	.col-7, 
-	.col-8, 
-	.col-9, 
-	.col-1, 
-	.col-1, 
+
+  .col-1,
+	.col-2,
+	.col-3,
+	.col-4,
+	.col-5,
+	.col-6,
+	.col-7,
+	.col-8,
+	.col-9,
+	.col-1,
+	.col-1,
 	.col-1 {
-	width: 100%; 
+	width: 100%;
 	}
 }
