--- a/dropbox/dropbox.css
+++ b/dropbox/dropbox.css
@@ -122,7 +122,12 @@ p {
 **********************************************/
 
 
-.why-image {
+.why-image-small {
+	width: 50%;
+	max-width: 200px;
+}
+
+.why-image-large {
 	width: 100%;
 	max-width: 200px;
 }
