Still testing animations

--- a/dropbox/animations.css
+++ b/dropbox/animations.css
@@ -87,6 +87,100 @@
 	}
 }
 
+@keyframes imageSlideDelayOne {
+	0% {
+		width: 50%;
+		transform: translate(-100px, 0);
+		-webkit-filter: blur(2px);
+		filter: blur(2px);
+	}
+	10% {
+		transform: translate(-100px, 0);
+	}
+	50% {
+		transform: translate(20px,0);
+	}
+	80% {
+		transform: translate(0,0);
+	}
+	100% {
+		width: 100%;
+		transform: translate(0,0);
+		-webkit-filter: blur(0);
+		filter: blur(0);
+	}
+}
 
+@-webkit-keyframes imageSlideDelayOne {
+	0% {
+		width: 50%;
+		transform: translate(-100px, 0);
+		-webkit-filter: blur(2px);
+		filter: blur(2px);
+	}
+	10% {
+		transform: translate(-100px, 0);
+	}
+	50% {
+		transform: translate(20px,0);
+	}
+	80% {
+		transform: translate(0,0);
+	}
+	100% {
+		width: 100%;
+		transform: translate(0,0);
+		-webkit-filter: blur(0);
+		filter: blur(0);
+	}
+}
+
+@keyframes imageSlideDelayTwo {
+	0% {
+		width: 50%;
+		transform: translate(-100px, 0);
+		-webkit-filter: blur(2px);
+		filter: blur(2px);
+	}
+	20% {
+		transform: translate(-100px, 0);
+	}
+	60% {
+		transform: translate(20px,0);
+	}
+	90% {
+		transform: translate(0,0);
+	}
+	100% {
+		width: 100%;
+		transform: translate(0,0);
+		-webkit-filter: blur(0);
+		filter: blur(0);
+	}
+}
+
+@-webkit-keyframes imageSlideDelayTwo {
+	0% {
+		width: 50%;
+		transform: translate(-100px, 0);
+		-webkit-filter: blur(2px);
+		filter: blur(2px);
+	}
+	20% {
+		transform: translate(-100px, 0);
+	}
+	60% {
+		transform: translate(20px,0);
+	}
+	90% {
+		transform: translate(0,0);
+	}
+	100% {
+		width: 100%;
+		transform: translate(0,0);
+		-webkit-filter: blur(0);
+		filter: blur(0);
+	}
+}
 
 
