--- a/reactsnake/snake.css
+++ b/reactsnake/snake.css
@@ -4,6 +4,15 @@ html, body, figure, figcaption, ul, li, h1 {
   border: 0;
   font: inherit;
   text-align: inherit;
+	color: #E9E9E9;
+}
+
+body {
+	background-color: #2D2D2D;
+}
+
+a {
+	color: #61DAFB;
 }
 
 ul {
@@ -22,11 +31,9 @@ h1 {
 }
 
 .board {
+	background-color: white;
   display: inline-block;
   border: 10px solid black;
-}
-
-ul {
 }
 
 ul:after {
