--- a/reactsnake/snake.css
+++ b/reactsnake/snake.css
@@ -1,14 +1,16 @@
-html, body, figure, figcaption, ul, li, h1 {
+figure, figcaption, ul, li, h1 {
   margin: 0;
-  padding: 0;
   border: 0;
+	padding: 0;
   font: inherit;
   text-align: inherit;
 	color: #E9E9E9;
 }
 
 body {
+	margin-top: 15px;
 	background-color: #2D2D2D;
+	color: #E9E9E9;
 }
 
 a {
